# knor-artifact

./: README.md
knor/: CMakeLists.txt
knor-experiments/: cactus_solver_times.tex  prepare.py
knor/src/: aigmaker.hpp  knor.cpp
oink/: CMakeLists.txt
rpackages/: bzip2-doc_1.0.8-5build1_all.deb  dvisvgm_2.13.1-1_amd64.deb  g++-11-multilib_11.4.0-1ubuntu1~22.04_amd64.deb  gcc-11-multilib_11.4.0-1ubuntu1~22.04_amd64.deb  gcc-12-base_12.3.0-1ubuntu1~22.04_amd64.deb  lib32asan6_11.4.0-1ubuntu1~22.04_amd64.deb  lib32atomic1_12.3.0-1ubuntu1~22.04_amd64.deb  lib32gcc-11-dev_11.4.0-1ubuntu1~22.04_amd64.deb  lib32gcc-s1_12.3.0-1ubuntu1~22.04_amd64.deb  lib32gomp1_12.3.0-1ubuntu1~22.04_amd64.deb  lib32itm1_12.3.0-1ubuntu1~22.04_amd64.deb  lib32quadmath0_12.3.0-1ubuntu1~22.04_amd64.deb  lib32stdc++-11-dev_11.4.0-1ubuntu1~22.04_amd64.deb  lib32stdc++6_12.3.0-1ubuntu1~22.04_amd64.deb  lib32ubsan1_12.3.0-1ubuntu1~22.04_amd64.deb  libblkid-dev_2.37.2-4ubuntu3_amd64.deb  libcurl4-openssl-dev_7.81.0-1ubuntu1.14_amd64.deb  libcurl4_7.81.0-1ubuntu1.14_amd64.deb  libdeflate-dev_1.10-2_amd64.deb  libfribidi-dev_1.0.8-2ubuntu3.1_amd64.deb  libgcc-s1_12.3.0-1ubuntu1~22.04_amd64.deb  libgfortran-11-dev_11.4.0-1ubuntu1~22.04_amd64.deb  libgfortran5_12.3.0-1ubuntu1~22.04_amd64.deb  libglib2.0-bin_2.72.4-0ubuntu2.2_amd64.deb  libglib2.0-dev-bin_2.72.4-0ubuntu2.2_amd64.deb  libglib2.0-dev_2.72.4-0ubuntu2.2_amd64.deb  libgraphite2-dev_1.3.14-1build2_amd64.deb  libharfbuzz-dev_2.7.4-1ubuntu3.1_amd64.deb  libharfbuzz-gobject0_2.7.4-1ubuntu3.1_amd64.deb  libjbig-dev_2.1-3.1ubuntu0.22.04.1_amd64.deb  (+68 more)
(+1251 files in other folders)
